[package]
name = "ground"
version = "0.1.0"
authors = ["Sergey Bugaev <bugaevc@gmail.com>"]
edition = "2018"

[features]
default = ["net"]
net = ["futures-core", "socket2"]
unix = ["futures-core", "socket2"]
dns = ["socket2"]

[dependencies]
libc = "0.2"

futures-io = "0.3"
futures-core = { version = "0.3", optional = true }

socket2 = { version = "0.4", features = ["all"], optional = true }

[dev-dependencies]
executor = { path = "executor" }
futures = "0.3"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# define the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "dns"
required-features = ["dns"]
